framec_tests/language_specific/rust/v3_control_flow/positive/nested_loops_inline_stack_then_transition_exec.frm
@target rust

system S {
    machine:
        $A {
            e() {
                {
                    // nested block as a stand-in for loops
                    $$[+]
                    { $$[-] }
                }
                -> $B()
            }
        }
        $B { e() { } }
}

