framec_tests/language_specific/rust/v3_control_flow/negative/handler_outside_state_block.frm
@target rust
# @expect: E404

system S {
    machine:
        // Handler outside of any state block
        e() { $$[+] }
}

